<resources>
    <string name="app_name">Mobile Pertamina</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id">all</string>
    <string name="fcm_message">Notifikasi baru</string>
    <string name="label_name">Name</string>
    <string name="company_code">Company code</string>
    <string name="label_userid">User ID</string>
    <string name="label_password">Password</string>
    <string name="label_pin">Your PIN</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_please_enter_phone">Please enter your phone number to receive OTP</string>
    <string name="label_send_otp">Send OTP</string>
    <string name="label_otp_request">OTP Request</string>
    <string name="label_otp_input">OTP Input</string>
    <string name="label_please_enter_otp">Please enter OTP that sent to your phone</string>
    <string name="label_proceed">Proceed</string>
    <string name="label_not_get_otp">Not getting the code?</string>
    <string name="label_resend">Resend</string>
    <string name="label_didn_get_otp">Did not get OTP?</string>
    <string name="pin_only">PIN</string>
    <string name="label_pin_repeat">Repeat your PIN</string>
    <string name="label_your_pin">Your PIN</string>
    <string name="title_activity_portal_home">PortalHomeActivity</string>
    <string name="title_account">Account</string>
    <string name="label_your_phone_number">Your phone number</string>
</resources>
